backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: backend
  labels:
    app: backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      serviceAccountName: backend

      containers:
      - name: backend

        image: 281639841923.dkr.ecr.ap-south-1.amazonaws.com/backend-rahulinfotech:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 5000

        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 20
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /ready
            port: 5000
          initialDelaySeconds: 20
          periodSeconds: 10

        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"
